# whatisgame

./: CMakeLists.txt  README.md  test.cpp
include/: classes.hpp  config.hpp  funcs.hpp
src/: Ball.cpp  GridMap.cpp  Paddle.cpp  Player.cpp  config.hpp  funcs.cpp  funcs.hpp  graphics.hpp  main.cpp
